fixed some issues on the add record page. Chnaged colour on date picker pop-out to black text, as it was white on white, fixed button on mobile, was alligned to the left, made it a full width buton. updated html and css styling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,7 +96,12 @@ main {
 .admin_help{
     text-decoration: underline;
 }
-
+.datepicker-day-button{
+    color: black;
+}
+.invoice{
+    font-size: 50%;
+}
 .admin_help:hover{
     text-decoration: none;
     font-size: 110%;
